# cloudreve-client

./: CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  flake.nix
.github/workflows/: beta-release.yml  ci.yml
crates/cloudreve-api/: Cargo.toml
crates/cloudreve-api/src/: client.rs  error.rs  lib.rs
crates/cloudreve-api/src/api/: explorer.rs
crates/cloudreve-api/src/boolset/: mod.rs
crates/cloudreve-api/src/models/: uri.rs
crates/cloudreve-api/tests/: credential_recovery.rs
crates/cloudreve-sync/: Cargo.toml
crates/cloudreve-sync/src/: config.rs  lib.rs
crates/cloudreve-sync/src/drive/: commands.rs  event_blocker.rs  heartbeat.rs  ignore.rs  mod.rs  mounts.rs  remote_events.rs  sync.rs  utils.rs
crates/cloudreve-sync/src/drive/manager/: command_handlers.rs  favicon.rs  mod.rs  types.rs
crates/cloudreve-sync/src/events/: mod.rs
crates/cloudreve-sync/src/inventory/: mod.rs  models.rs
crates/cloudreve-sync/src/inventory/db/: file_metadata.rs  tasks.rs
crates/cloudreve-sync/src/tasks/: download.rs  queue.rs  upload.rs
crates/cloudreve-sync/src/uploader/: encrypt.rs  mod.rs  progress.rs
crates/cloudreve-sync/src/uploader/providers/: http.rs  local.rs  mod.rs  onedrive.rs  qiniu.rs  s3.rs  upyun.rs
crates/cloudreve-sync/src/utils/: app.rs  mod.rs  secure_fs.rs  toast.rs
crates/cloudreve-sync/tests/: credentials.rs  download_retry.rs  pause_resume.rs  sse_reconnect.rs  sync_scenarios.rs  uploading_files.rs
crates/cloudreve-sync/tests/common/: mod.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  event_handler.rs  lib.rs
ui/: package.json
ui/public/locales/de/: common.json
ui/public/locales/en-US/: common.json
ui/public/locales/es/: common.json
ui/public/locales/fr/: common.json
ui/public/locales/it/: common.json
ui/public/locales/ja/: common.json
ui/public/locales/ko/: common.json
ui/public/locales/pl/: common.json
ui/public/locales/ru/: common.json
ui/public/locales/zh-CN/: common.json
ui/public/locales/zh-TW/: common.json
ui/src/pages/: AddDrive.tsx
ui/src/pages/popup/: ConflictItem.tsx  TaskItem.tsx  index.tsx  types.ts
ui/src/pages/settings/: AboutSection.tsx  DrivesSection.tsx  GeneralSection.tsx  ProfileSection.tsx  index.tsx  types.ts
