[package]
name = "cloudreve-desktop"
version = "0.2.0-beta.1"
description = "Cloudreve Desktop Sync Client (macOS/Linux)"
authors = ["cloudreve"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
log = "0.4"
tauri = { version = "2.9.5", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
anyhow = "1.0"
rust-i18n = "3"
sys-locale = "0"
base64 = "0.22"
showfile = "0.1"
urlencoding = "2.1"

# Main sync service crate
cloudreve-sync = { path = "../crates/cloudreve-sync" }
cloudreve-api = { path = "../crates/cloudreve-api" }

tauri-plugin-autostart = "2"
tauri-plugin-frame = "1.1.6"
tauri-plugin-http = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-prevent-default = "4"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
tauri-plugin-positioner = { version = "2.3.1", features = ["tray-icon"] }
