[package]
name = "cloudreve-sync"
version = "0.2.0-beta.1"
edition = "2024"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
dirs = "5.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
sha2 = "0.10"
image = "0.24"
url = "2.5"
cloudreve-api = { path = "../cloudreve-api" }
chrono = "0.4.42"
diesel = { version = "2.1", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.1", features = ["sqlite"] }
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
open = "5.3.2"
rust-i18n = "3"
dark-light = "2.0.0"
bytes = "1"
notify-debouncer-full = "0.6.0"
dashmap = "5"
thiserror = "2.0"
base64 = "0.22"
aes = "0.8"
ctr = "0.9"
tokio-util = { version = "0.7", features = ["io"] }
globset = "0.4"

[dependencies.uuid]
version = "1.6"
features = ["v4", "serde"]

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"
filetime = "0.2"
